--- a/whispers/rules/dangerous-functions.yml
+++ b/whispers/rules/dangerous-functions.yml
@@ -1,10 +1,10 @@
-dangerous-functions: 
-  description: Dangerous function calls that could lead to RCE
-  message: Dangerous Function
-  severity: MAJOR
-  key:
-    regex: ^function$
-    ignorecase: False
-  value:
-    regex: ^(eval|exec|(os.)?system|popen|call|subprocess\.(check_output|call))\(
-    ignorecase: True
+# dangerous-functions: 
+#   description: Dangerous function calls that could lead to RCE
+#   message: Dangerous Function
+#   severity: BLOCKER
+#   key:
+#     regex: ^function$
+#     ignorecase: False
+#   value:
+#     regex: ^(eval|exec|(os.)?system|popen|call|subprocess\.(check_output|call))\(
+#     ignorecase: True
